# fastapi-app

./: .gitignore  README.md  pyproject.toml
altair-app/backend/src/: main.py
altair-app/frontend/: package-lock.json  package.json
altair-app/frontend/src/: App.tsx
netflix-app/: README.md  package-lock.json  package.json
netflix-app/src/: App.tsx  request.js
netflix-app/src/components/: Banner.tsx  Nav.tsx  Row.scss  Row.tsx
reservation-app/: README.md  app.py
reservation-app/sql_app/: crud.py  main.py  schemas.py
simple-app/backend/: main.py
simple-app/frontend/: package-lock.json  package.json
simple-app/frontend/src/: App.tsx
simple-app/frontend/src/components/: Home.tsx  Month.tsx  Navigation.tsx  Register.tsx
todo-app/: README.md  package-lock.json
todo-app/src/: App.jsx
todo-ts-app/: README.md  package-lock.json  package.json
todo-ts-app/src/: App.tsx
work-hour-app/: README.md
work-hour-app/backend/src/: crud.py  main.py  models.py  schemas.py
work-hour-app/frontend/: package-lock.json  package.json
work-hour-app/frontend/public/: index.html
work-hour-app/frontend/src/: App.tsx  apis.ts  fetcher.ts
work-hour-app/frontend/src/components/: Data.tsx  Home.tsx  Update.tsx  Visualization.tsx
work-hour-app/frontend/src/openapi/.openapi-generator/: FILES
work-hour-app/frontend/src/openapi/apis/: DefaultApi.ts
work-hour-app/frontend/src/openapi/models/: ValidationError.ts  Work.ts  WorkCreate.ts  WorkUpdate.ts  index.ts
