[tool.poetry]
name = "fastapi_"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.70.0"
ipython = "^7.30.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.4"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.10.1"
black = "^21.11b1"
uvicorn = "^0.15.0"
streamlit = "^1.2.0"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
